@@ -24,7 +24,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.5
+Release: 0.6
 Group: System Environment/Base
 Source: ftp://wraptastic.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -578,6 +578,13 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Sat Jan 21 2006 Jeff Johnson <jbj@jbj.org> 4.4.5-0.7
+- irix: avoid NULL environ segfault with non-gcc sgi compiler (#178133).
+
+* Fri Jan 20 2006 Jeff Johnson <jbj@jbj.org> 4.4.5-0.6
+- fix: perldeps and prov.pl not to emit perl(main) (#177960)
+- build against FC5t2+.
+
 * Fri Jan  6 2006 Jeff Johnson <jbj@jbj.org> 4.4.5-0.5
 - fix: solaris d->d_reclen is unreliable in certain cases (#128593).
 
