@@ -4,6 +4,8 @@
 	- rollback: don't bother erasing rollback repackages, just don't create.
 	- fix: solaris d->d_reclen is unreliable in certain cases (#128593).
 	- fix: perldeps and prov.pl not to emit perl(main) (#177960)
+	- build against FC5t2+.
+	- irix: avoid NULL environ segfault with non-gcc sgi compiler (#178133).
 
 4.4.3 -> 4.4.4:
 	- start rpm-4.4.4 development.
